# dembow

./: .gitignore  README.html  README.md  fire.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dembow/: __init__.py  cli.py  data.py  dataset.py  generate.py  groove.py  lstm.py  midi_io.py  model.py  rbm.py  render.py  representation.py  tokenizer.py  train.py
dembow/assets/: dembow-pretrained.pt
examples/: README.md  dembow_0.mid  dembow_1.mid  dembow_2.mid
reggaeton_samples/: Angel y khriz - Ven bailalo 1.mid  Angel y khriz - Ven bailalo 3.mid  Angel y khriz -Ven bailalo 2.mid  Aventura-Amor_de_Madre.mid  Boricua morena.mid  CACHON.MID  DON_OMAR-Gata_ganster.mid  DON_OMAR-Provocandome.mid  Daddy Yankee - Gasolina 2.mid  Daddy Yankee - Gasolina 3.mid  Daddy Yankee - La gasolina.mid  Daddy Yankee y Nicky Jam-Ahora.mid  Daddy Yankee-Saoco.mid  Daddy yankee - Gasolina 1.mid  Daddy yankee - Lo que paso 1.mid  Daddy yankee - Tu principe.mid  Dominica.mid  Don omar - Cuentale.mid  Don omar - Dale don dale.mid  Don omar - Pobre diabla.mid  Don_Omar-Dile.mid  Eddie Dee-12 Discipulos.mid  Felina.mid  Gata-fiera-trebol-clan.mid  HECTOR_EL_BAMBINO_FEAT_DAVID_CIVERA-Noche_de_travesura.mid  Hector y tito - Baila morena 2.mid  Hector y tito - Baila morena.mid  LaMiradi.mid  Loquepas.mid  Luna.mid  MACARENA.MID  MAYOR QUE YO.mid  Meestoym.mid  Olvidala.mid  Otranoch.mid  Pobredia.mid  QuePasoPaso.mid  SOURCES.md  Silvestre_Dangond-LaColegiala.mid  Subetybaja.mid  (+28 more)
tests/: test_smoke.py
