[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dembow"
version = "2.1.0"
description = "The first A.I. that generates reggaeton hits -- a Transformer for dembow."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "mido>=1.3",
    "torch>=2.0",
]

[project.scripts]
dembow = "dembow.cli:main"

[tool.setuptools]
packages = ["dembow"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so `pytest tests/` finds the package without an
# install step (used both locally and in CI).
pythonpath = ["."]
testpaths = ["tests"]
